--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="#hero" class="active">.home()</a></li>
                 <li><a href="#skills">.skills()</a></li>
                 <li><a href="#projects">.projects()</a></li>
-                <li><a href="#contact">.contact()</a></li>
+                <li><a href="#contact">.contact_me()</a></li>
             </ul>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
@@ -62,9 +62,9 @@
                 <p class="subtitle">I am <span id="typing-text"></span><span class="cursor">|</span></p>
 
                 <div class="bio-text">
-                    <p>Full Stack Development graduate from Holberton School with a solid foundation in programming (C,
-                        Python, JavaScript).</p>
-                    <p>Proficient in Spring Boot, VS Code, Eclipse, and Bash. Recognized for analytical ability and
+                    <p>Full Stack Development graduate from Holberton School and Globant University. Proficient in Java,
+                        Python and C.</p>
+                    <p>Worked with Spring Boot, VS Code, Eclipse, and Bash. Recognized for analytical ability and
                         problem-solving.</p>
                     <p>Passionate about cybersecurity and continuous learning.</p>
                 </div>
@@ -97,7 +97,7 @@
     <!-- Skills Section -->
     <section id="skills">
         <div class="container margin-bottom">
-            <h2 class="section-title">01. MY_STACK</h2>
+            <h2 class="section-title">01. SKILLS</h2>
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fab fa-java"></i>
